--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -42,6 +42,25 @@
     margin: 30px 0 70px;
 }
 
+@property --num {
+    syntax: "<integer>";
+    initial-value: 0;
+    inherits: false;
+}
+
+.columns.facts  > div > div > p:first-of-type{
+    transition: --num 1s;
+    counter-set: num var(--num);
+}
+
+.columns.facts > div > div > p:first-of-type::before {
+    content: counter(num);
+}
+
+body {
+    margin: 2rem;
+}
+
 
 .makeitblue {
     background-color: var(--highlight-background-color);
